@@ -343,12 +343,12 @@ void thanks_for_all_the_fish(void);
 #endif
 
 /* All functions in help.c. */
-#ifndef DISABLE_HELP
-void do_help(void (*refresh_func)(void));
-void do_help_void(void);
 #ifndef DISABLE_BROWSER
 void do_browser_help(void);
 #endif
+void do_help_void(void);
+#ifndef DISABLE_HELP
+void do_help(void (*refresh_func)(void));
 void help_init(void);
 void parse_help_input(int *kbinput, bool *meta_key, bool *func_key);
 size_t help_line_len(const char *ptr);
